--- a/Vasilisa.html
+++ b/Vasilisa.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Василиса</h2></a>
         <a href="Vasilisa/site01/index.html">1 сайт</a><br><br>
+        <a href="Vasilisa/site02/index.html">2 сайт</a><br><br>
         </div>
     </body>
 </html>
