--- a/Milla.html
+++ b/Milla.html
@@ -34,7 +34,7 @@
     </head>
     <body bgcolor="thistle">
         <div>
-        <a><h2>Василиса</h2></a>
+        <a><h2>Милла</h2></a>
         <a href="Milla/site01/index.html">1 сайт</a><br><br>
         </div>
     </body>
