--- a/Misha.html
+++ b/Misha.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Михаил</h2></a>
         <a href="Misha/site01/index.html">1 сайт</a><br><br>
+        <a href="Misha/site02/index.html">2 сайт</a><br><br>
         </div>
     </body>
 </html>
