--- a/Deny.html
+++ b/Deny.html
@@ -37,6 +37,7 @@
         <a><h2>Mr. Deny</h2></a>
         <a href="Deny/site01/index.html">1 сайт</a><br><br>
         <a href="Deny/site02/index.html">2 сайт</a><br><br>
+        <a href="Deny/site03/index.html">3 сайт</a><br><br>
         </div>
     </body>
 </html>
