--- a/Alexey.html
+++ b/Alexey.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Алексей</h2></a>
         <a href="Alexey/site01/index.html">1 сайт</a><br><br>
+        <a href="Alexey/site02/index.html">2 сайт</a><br><br>
         </div>
     </body>
 </html>
