--- a/LeonidB.html
+++ b/LeonidB.html
@@ -36,6 +36,7 @@
         <div>
         <a href="LeonidB/site01/index.html">1 сайт</a>
         <a href="LeonidB/site02/index.html">2 сайт</a>
+        <a href="LeonidB/site03/index.html">3 сайт</a>
         </div>
     </body>
 </html>
