--- a/GrishinM.html
+++ b/GrishinM.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Гришин Максим</h2></a>
         <a href="GrishinM/site01/index.html">1 сайт</a><br><br>
+        <a href="GrishinM/site02/index.html">2 сайт</a><br><br>
         </div>
     </body>
 </html>
