--- a/LeonidB.html
+++ b/LeonidB.html
@@ -37,6 +37,8 @@
         <a href="LeonidB/site01/index.html">1 сайт</a>
         <a href="LeonidB/site02/index.html">2 сайт</a>
         <a href="LeonidB/site03/index.html">3 сайт</a>
+	<a href="LeonidB/site04/index.html">4 сайт</a>
+        <a href="LeonidB/site05/index.html">5 сайт</a>
         </div>
     </body>
 </html>
