--- a/OlyaUmasheva.html
+++ b/OlyaUmasheva.html
@@ -36,6 +36,7 @@
         <div>
         <a><h2>Оля Юмашева</h2></a>
         <a href="OlyaUmasheva/site01/index.html">1 сайт</a><br><br>
+        <a href="OlyaUmasheva/site02/index.html">2 сайт</a><br><br>
         </div>
     </body>
 </html>
